
= rufus-jig CHANGELOG.txt

== rufus-jig - 0.1.1    not yet released

== rufus-jig - 0.1.0    released 2009/11/09
